# Slimki

./: CMakeLists.txt  README.md
include/: algo_utils.h  huffman.h  huffman_tree.h
src/: algo_utils.cpp  huffman.cpp  huffman_tree.cpp  main.cpp
tests/: CMakeLists.txt  algo_utils_test.cpp  huffman_test.cpp  huffman_tree_test.cpp  huffman_tree_utils.cpp  huffman_tree_utils.h
